# fintech-agent

./: .gitignore  README.md
BE/: .env.example  .gitignore  README.md  README_RESEARCH_WORKFLOW.md  pyproject.toml  requirements.txt  test_api.py
BE/conversations/: 464b990a-c310-4a37-9578-a19342ab2ea6_2026-02-04T14-58-29.txt  b79fdb3b-5d09-484b-b95e-ecd5f4e6cd6a_2026-02-04T15-08-14.txt
BE/docs/: research_workflow_design.md
BE/src/finance_agent/: __init__.py  main.py
BE/src/finance_agent/api/v1/: research.py
BE/src/finance_agent/config/: __init__.py  settings.py
BE/src/finance_agent/core/: config.py
BE/src/finance_agent/graph/: __init__.py  edges.py  nodes.py  workflow.py
BE/src/finance_agent/mcp/: __init__.py  client.py  converter.py
BE/src/finance_agent/modules/research/graph/: __init__.py  research_state.py  research_workflow.py  state.py
BE/src/finance_agent/modules/research/graph/research_nodes/: __init__.py  aggregator.py  ask_user.py  memory.py  orchestrator.py  reviewer.py  search.py
BE/src/finance_agent/modules/research/tools/: research.py
BE/src/finance_agent/shared/: logger.py
BE/src/finance_agent/tools/: __init__.py  calculators.py
BE/src/finance_agent/utils/: __init__.py
BE/storage/: 8ee98a57-e2c4-4258-9317-87a6e0bf1df0_2026-02-04T15-59-37.086626.txt  ad65bde5-9abe-4842-9e03-236cb170bdd0_2026-02-04T16-04-21.876191.txt  af868899-0d1d-4234-866a-617db0b606c8_2026-02-04T16-07-23.663472.txt  e9bcd4b1-33b2-4d8c-a675-e41844f6c94d_2026-02-04T15-47-55.302354.txt
FE/: pubspec.yaml
FE/lib/: main.dart
FE/linux/: CMakeLists.txt
(+25 files in other folders)
